<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- String Arrays for Spinners -->
    <string-array name="years">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="semesters">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>

    <!-- String Resources -->
    <string name="app_name">lab5</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSubmit">Submit</string>
    <string name="cbAgreement">I agree to terms and conditions</string>
    <string name="tvSemester">Select the Semester</string>
    <string name="tvYear">Select Academic Year</string>
    <string name="edtStudentID">Enter Student ID</string>
    <string name="tvTitle">Register Student</string>

</resources>
