<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTitle"
            android:textSize="24sp"
        android:gravity="center"
        android:paddingBottom="8dp"/>

        <EditText
            android:id="@+id/edtStudentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtStudentID"
            android:textSize="18sp"
        android:inputType="text"
        android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvYear"
            android:textSize="18sp"
        android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/spnYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/years"/>

        <TextView
            android:id="@+id/tvSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSemester"
            android:textSize="18sp"
        android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/spnSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/semesters"/>

        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbAgreement"
            android:textSize="16sp"
        android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
        android:text="@string/btnSubmit"
        android:textAlignment="center"
        android:textSize="18sp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
        android:text="@string/btnCancel"
        android:textAlignment="center"
        android:textSize="18sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>